<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017-2018 Hermann Krumrey<hermann@krumreyh.com>

This file is part of android-dice.

android-dice is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

android-dice is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with android-dice.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Dice Roller</string>

    <!-- Titles -->
    <string name="theme_settings_title">Theme Settings</string>

    <!-- Image Descriptions -->
    <string name="dice_content_description">A standard die. Can be pressed to start rolling</string>
    <string name="setting_button_description">The Settings button</string>
    <string name="red_risk_dice_description">A Red Risk Die</string>
    <string name="blue_risk_dice_description">A Blue Risk Die</string>

    <!-- Menu options -->
    <string name="vibrate_option">Vibrate</string>
    <string name="wiggle_animation_option">Wiggle Animation</string>
    <string name="switcher_animation_option">Switcher Animation</string>
    <string name="classic_theme_option">Classic</string>
    <string name="red_theme_option">Red</string>
    <string name="blue_theme_option">Blue</string>

    <!-- Buttons -->
    <string name="ok_button_text">OK</string>
    <string name="one_die_activity_button">1 Die</string>
    <string name="two_dice_activity_button">2 Dice</string>
    <string name="risk_dice_activity_button">Risk Dice</string>
    <string name="text_die_activity_button">Text Die</string>
    <string name="lottery_activity_button">Lottery</string>

    <!-- Text Dice -->
    <string name="text_die_start_value">0</string>
    <string name="text_die_range_label">Range:</string>
    <string name="text_die_range_start_value">0</string>

    <!-- Lottery -->
    <string name="weighted_values_toggle_text">Weighted Values</string>
    <string name="random_values_toggle_text">Random Values</string>
    <string name="eurojackpot">Eurojackpot</string>
    <string name="normal">Normal</string>
</resources>
