<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2015-2017 Hermann Krumrey

This file is part of android-dice.

android-dice is an Android app that allows a user to roll a virtual
die. Multiple configurations are supported

android-dice is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

android-dice is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with android-dice. If not, see <http://www.gnu.org/licenses/>.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/single_die_activity"
            style="@style/ModeSwitcherButton"
            android:text="@string/one_die_activity_button"/>

        <Button
            android:id="@+id/two_dice_activity"
            style="@style/ModeSwitcherButton"
            android:text="@string/two_dice_activity_button"/>

        <Button
            android:id="@+id/risk_dice_activity"
            style="@style/ModeSwitcherButton"
            android:text="@string/risk_dice_activity_button"/>

        <Button
            android:id="@+id/text_dice_activity"
            style="@style/ModeSwitcherButton"
            android:text="@string/text_die_activity_button"/>

        <Button
            android:id="@+id/lottery_activity"
            style="@style/ModeSwitcherButton"
            android:text="@string/lottery_activity_button"/>

    </LinearLayout>

</merge>